# mcp-server-ga4

./: Dockerfile  README.md  pyproject.toml  setup.py  smithery.yaml
mcp_server_ga4/: __init__.py  ga4_client.py  main.py  tools.py
